# multi-modal-ai-content-forensics

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  gateway_verify.py  pyproject.toml  pytest.ini  run_test.ps1  run_test_b.ps1  run_test_c.ps1  run_test_d.ps1  run_ui_test.ps1  verify.py  verify_phase_a.py  verify_phase_c.py  verify_phase_d.py  verify_ui.py
.github/workflows/: ci.yml
docs/: 30_day_detailed_plan.html  blueprint_sections_1_to_4.md  blueprint_sections_5_to_8.md  blueprint_sections_9_to_14.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
frontend/src/components/upload/: JobStatusCard.tsx  UploadDropzone.tsx
services/api-gateway/: Dockerfile  pyproject.toml  requirements.txt
services/api-gateway/app/: main.py
services/auth-service/: Dockerfile  pyproject.toml  requirements.txt
services/auth-service/app/: main.py
services/auth-service/tests/: test_security.py
services/stub-consumer/: main.py
shared/: pyproject.toml
shared/db/: alembic.ini  base.py  session.py
shared/db/alembic/: env.py
shared/db/alembic/versions/: 001_initial_migration.py
shared/db/models/: __init__.py  job.py  report.py  user.py
shared/schemas/: auth.py
tests/e2e/: run_all.ps1  verify_phase_a.py  verify_phase_b.py  verify_phase_c.py  verify_phase_d.py
tests/unit/: test_auth.py  test_security.py
(+15 files in other folders)
