[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-forensics"
version = "0.1.0"
description = "Shared DB and utility modules for Multi-Modal AI Content Forensics Platform"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
